@@ -1,9 +1,9 @@
 Bundle: VR
 Priority: recommended
 Contains: MASS class nnet spatial
-Version: 7.2-29
-Date: 2006-09-05
-Depends: R (>= 2.4.0), graphics, stats, utils
+Version: 7.2-30
+Date: 2006-11-29
+Depends: R (>= 2.4.0), grDevices, graphics, stats, utils
 Suggests: lattice, nlme, survival
 Author: S original by Venables & Ripley.
   R port by Brian Ripley <ripley@stats.ox.ac.uk>, following earlier
@@ -13,4 +13,4 @@ BundleDescription: Functions and datasets to support Venables and
   Ripley, 'Modern Applied Statistics with S' (4th edition).
 License: GPL (version 2 or later)  See file LICENCE.
 URL: http://www.stats.ox.ac.uk/pub/MASS4/
-Packaged: Tue Sep  5 15:02:38 2006; ripley
+Packaged: Wed Nov 29 12:55:49 2006; ripley
